<resources>
    <string name="app_name">Receitas</string>
    <string name="nova_receita">Nova Receita</string>
    <string name="editar_receita">Editar Receita</string>
    <string name="nome">Nome</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="modo_preparo">Modo de Preparo</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="cancelar">Cancelar</string>
    <string name="id">ID:</string>
    <string name="editar">Editar</string>
    <string name="sair">Sair</string>
    <string name="realmente_sair">Você realmente deseja sair?</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>

</resources>
